fix(treeSelect): #TINFR-403   set margin-left to 20 when no grouping, and the spacing between the icon and the text to 8px.

--- a/src/shared/option/styles/option.mixin.scss
+++ b/src/shared/option/styles/option.mixin.scss
@@ -43,7 +43,7 @@
 
     // use in tree-select
     .prefix-icon {
-        margin-right: 4px;
+        margin-right: 8px;
         color: variables.$gray-500;
     }
 
